<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:padding="5dp"
            android:textStyle="bold"
            android:textColor="#000"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="New Appointment Details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="18sp"
            android:textColor="#000"
            android:padding="4dp"
            android:text="Date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/newday"
        android:hint="YYYY-MM-dd"
        android:inputType="date"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />

        <TextView
            android:textSize="18sp"
            android:textColor="#000"
            android:padding="4dp"
            android:text="Time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/newtime"
        android:hint="HH : MM"
        android:inputType="time"
        android:layout_width="300dp"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"></EditText>


    <Button
        android:onClick="Action"
        android:text="move"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>