...
                </LinearLayout>

                <TextView
                    android:onClick="Action"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:id="@+id/moveBooking"
                    android:textAlignment="center"
                    android:drawableLeft="@mipmap/ic_launcher_move"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:text="Move"
                    android:layout_width="200dp"
                    android:layout_height="match_parent" />
        </LinearLayout>



...
